# Plotty

./: CMakeLists.txt  Makefile.am  README.md  configure.ac
data/: CMakeLists.txt  Makefile.am
examples/: CMakeLists.txt  Makefile.am  benchmark.cxx  test_fft.cxx  test_img.cxx  test_plot.cxx
src/: CMakeLists.txt  Makefile.am  fft.cxx  fft.h  images.cxx  images.h  math.cxx  math.h  plotty-version.h.in  plotty.cxx  plotty.h
